--- a/catalogo-mobile.html
+++ b/catalogo-mobile.html
@@ -83,15 +83,7 @@
           <div class="scheda_container">
             <div class="text_scheda">
 
-              Martino è molto affezionato
-              alla Maestra ma un giorno
-              i suoi genitori gli dicono
-              che è morta.
-              «Morta? Cosa vuol dire morta?»
-              si chiedono Martino, Edo e Olivia.
-              Ed è proprio nella casa della Maestra
-              che i tre amici cercheranno
-              le risposte a questa domanda.
+            Martino è molto affezionato alla Maestra ma un giorno i suoi genitori gli dicono che è morta. “Morta? Cosa vuol dire morta?” si chiedono Martino, Edo e Olivia. Ed è proprio nella casa della Maestra che i tre amici cercheranno le risposte a questa domanda.
             </div>
 
           </div>
@@ -106,30 +98,21 @@
           <div class="scheda_container">
             <div class="text_scheda">
 
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+              La morte è un argomento delicato e difficile da intraprendere. In questo libro parliamo ai bambini della morte nella maniera più naturale possibile. Abbiamo voluto trattarla come parte stessa e inevitabile della vita, come qualcosa di irreversibile ma non spaventoso. E una volta superato il dolore della perdita, la vita può e deve andare avanti.
             </div>
 
           </div>
         </div>
         <div class="libro_gender">
           <div class="title little black">
-            La Maestra non respira
+            Le due mamme di Olivia
           </div>
           <div class="scheda_container">
             <div class="text_scheda">
 
-              Martino è molto affezionato
-              alla Maestra ma un giorno
-              i suoi genitori gli dicono
-              che è morta.
-              «Morta? Cosa vuol dire morta?»
-              si chiedono Martino, Edo e Olivia.
-              Ed è proprio nella casa della Maestra
-              che i tre amici cercheranno
-              le risposte a questa domanda.
+              A scuola si stanno tutti impegnando per la festa del papà. Ma Olivia non sa proprio cosa disegnare.
+              Perché ho due mamme e non un papà? si chiede imbarazzata. Saranno Edo e Martino ad aiutarla a capire che anche la sua è una famiglia.
+
             </div>
 
           </div>
@@ -144,9 +127,7 @@
           <div class="scheda_container">
             <div class="text_scheda">
 
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
+              In questo libro parleremo dell'orientamento sessuale e di famiglia. Sono due concetti molto ampi e importanti ed è bene che i bambini capiscano che non esiste un giusto e uno sbagliato. L'unica cosa importante è stare bene con se stessi e con gli altri.
 
             </div>
 
@@ -154,20 +135,14 @@
         </div>
         <div class="libro_mestruo">
           <div class="title little black">
-            La Maestra non respira
+            La Babysitter perde sangue
           </div>
           <div class="scheda_container">
             <div class="text_scheda">
 
-              Martino è molto affezionato
-              alla Maestra ma un giorno
-              i suoi genitori gli dicono
-              che è morta.
-              «Morta? Cosa vuol dire morta?»
-              si chiedono Martino, Edo e Olivia.
-              Ed è proprio nella casa della Maestra
-              che i tre amici cercheranno
-              le risposte a questa domanda.
+              Martino si è sempre divertito molto con la sua Babysitter. Ma un giorno, proprio mentre stanno giocando, le compare una chiazza rossa sui jeans.
+              Perché perdi sangue? le chiede Martino. Solo dopo una serie di incomprensioni riuscirà a capire cosa sono le mestruazioni.
+
             </div>
 
           </div>
@@ -182,9 +157,7 @@
           <div class="scheda_container">
             <div class="text_scheda">
 
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
+              Le prime mestruazioni possono essere causa di forte imbarazzo, e possono creare situazioni scomode anche per il sesso opposto, soprattutto se non si ha presente cosa stia succedendo al corpo. In questo libro vogliamo chiarire in modo semplice cos'è il ciclo mestruale e spiegare che è normale e non una cosa di cui avere schifo o imbarazzo.
 
             </div>
 
@@ -192,20 +165,14 @@
         </div>
         <div class="libro_psico">
           <div class="title little black">
-            La Maestra non respira
+            La terapia di Edo
           </div>
           <div class="scheda_container">
             <div class="text_scheda">
 
-              Martino è molto affezionato
-              alla Maestra ma un giorno
-              i suoi genitori gli dicono
-              che è morta.
-              «Morta? Cosa vuol dire morta?»
-              si chiedono Martino, Edo e Olivia.
-              Ed è proprio nella casa della Maestra
-              che i tre amici cercheranno
-              le risposte a questa domanda.
+              Edo ha sempre avuto molte difficoltà a memorizzare le cose e rimanere concentrato. Un giorno la Mamma, insieme alla Maestra, gli dice che dovrà andare da un dottore.
+              Perché devo andare dallo Psicologo? Sono malato? si chiede Edo preoccupato. Insieme a Martino e Olivia troverà il coraggio di affrontare anche questa situazione.
+
             </div>
 
           </div>
@@ -220,9 +187,7 @@
           <div class="scheda_container">
             <div class="text_scheda">
 
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-              TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
+              La prospettiva di andare dallo psicologo o di mandarci il proprio figlio può incutere timore. In questo libro cercheremo di far capire che andare dallo psicologo non significa essere malato o debole, ma che è del tutto normale e soprattutto utile, ed è una cosa che facciamo per poter stare meglio.
 
             </div>
 
