--- a/catalogo.html
+++ b/catalogo.html
@@ -77,8 +77,7 @@
           </div>
           <div class="text_scheda" style="width:33%;">
 
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+            Martino è molto affezionato alla Maestra ma un giorno i suoi genitori gli dicono che è morta. “Morta? Cosa vuol dire morta?” si chiedono Martino, Edo e Olivia. Ed è proprio nella casa della Maestra che i tre amici cercheranno le risposte a questa domanda.
           </div>
         </div>
         <div class="title little black">
@@ -87,17 +86,11 @@
         <div class="scheda_container">
           <div class="text_scheda">
 
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+            La morte è un argomento delicato e difficile da intraprendere. In questo libro parliamo ai bambini della morte nella maniera più naturale possibile. Abbiamo voluto trattarla come parte stessa e inevitabile della vita,
           </div>
           <div class="text_scheda">
 
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+            come qualcosa di irreversibile ma non spaventoso, e una volta superato il dolore della perdita la vita può e deve andare avanti.
           </div>
         </div>
       </div>
@@ -123,16 +116,11 @@
         <div class="scheda_container">
           <div class="text_scheda">
 
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+          In questo libro parleremo dell'orientamento sessuale e di famiglia. Sono due concetti molto importanti ed è bene che i bambini capiscano che sono anche molto ampi e che non esiste un giusto e
           </div>
           <div class="text_scheda">
 
-            A scuola si stanno tutti impegnando per la festa del papà. Ma Olivia non sa proprio cosa disegnare.
-            Perché ho due mamme e non un papà? si chiede imbarazzata. Saranno Edo e Martino ad aiutarla a capire che anche la sua è una famiglia.
-
+          uno sbagliato ma che l'unica cosa importante è stare bene con gli altri e con noi stessi.
           </div>
         </div>
       </div>
@@ -158,16 +146,11 @@
         <div class="scheda_container">
           <div class="text_scheda">
 
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+            Le prime mestruazioni possono essere causa di forte imbarazzo, e possono creare situazioni scomode, soprattutto se non si ha presente cosa sta succedendo al proprio corpo.
           </div>
           <div class="text_scheda">
 
-            Martino si è sempre divertito molto con la sua Babysitter. Ma un giorno, proprio mentre stanno giocando, le compare una chiazza rossa sui jeans.
-            Perché perdi sangue? le chiede Martino. Solo dopo una serie di incomprensioni riuscirà a capire cosa sono le mestruazioni.
-
+            In questo libro vogliamo chiarire in modo semplice cos'è il ciclo e spiegare che è normale e non una cosa di cui avere schifo o imbarazzo.
           </div>
         </div>
       </div>
@@ -193,16 +176,11 @@
         <div class="scheda_container">
           <div class="text_scheda">
 
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-            TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi importanti.
-
+          La prospettiva di andare dallo psicologo o di mandarci il proprio figlio può incutere timore. In questo libro cercheremo di far passare il concetto che andare dallo psicologo non
           </div>
           <div class="text_scheda">
 
-            Edo ha sempre avuto molte difficoltà a memorizzare le cose e rimanere concentrato. Un giorno la Mamma, insieme alla Maestra, gli dice che dovrà andare da un dottore.
-            Perché devo andare dallo Psicologo? Sono malato? si chiede Edo preoccupato. Insieme a Martino e Olivia troverà il coraggio di affrontare anche questa situazione.
-
+          significa essere malato o debole, ma che è del tutto normale e soprattutto utile, ed è una cosa che facciamo per poter stare meglio.
           </div>
         </div>
       </div>
