--- a/chi-siamo-mobile.html
+++ b/chi-siamo-mobile.html
@@ -111,12 +111,12 @@
 
 
         <div class="title">
-         Olivia
+         Martino
        </div>
         <div class="mobile-flex">
           <img src="immagini/Martino saluta.png">
           <div class="text-pers very_little path3">
-           questo è un bel testo
+           Martino è un bambino introverso, spaventato dalle cose che non sa. Ci vuole sempre un po' per spingerlo ad essere coraggioso, ma alla fine grazie ai suoi amici riesce sempre.
          </div>
         </div>
 
@@ -126,7 +126,7 @@
          </div>
           <div class="mobile-flex">
             <div class="text-pers very_little path3">
-             questo è un bel testo
+             Olivia è la più coraggiosa e curiosa del gruppo. Prende sempre l'iniziativa e spesso convince i suoi amici ad affrontare le loro paure.
            </div>
             <img src="immagini/Olivia saluta.png">
 
@@ -134,12 +134,12 @@
 
 
           <div class="title">
-           Olivia
+           Edo
          </div>
           <div class="mobile-flex">
             <img src="immagini/Edo saluta.png">
             <div class="text-pers very_little path3">
-             questo è un bel testo
+             Edo è il bambino è più sensibile, che si pone più domande e cerca conforto nell’adulto. È molto buono con tutti e non si tira mai indietro.
            </div>
           </div>
 
