--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -135,7 +135,7 @@
               <img src="/tabum/immagini/Martino saluta.png">
             </div>
             <div class="text-pers very_little">
-              questo è un bel testo
+              Martino è un bambino introverso, spaventato dalle cose che non sa. Ci vuole sempre un po' per spingerlo ad essere coraggioso, ma alla fine grazie ai suoi amici riesce sempre.
             </div>
 
             <div class="big-pers">
@@ -143,7 +143,7 @@
             </div>
 
             <div class="text-pers very_little">
-              questo è un bel testo
+              Olivia è la più coraggiosa e curiosa del gruppo. Prende sempre l'iniziativa e spesso convince i suoi amici ad affrontare le loro paure.
             </div>
 
             <div class="big-pers">
@@ -151,7 +151,7 @@
             </div>
 
             <div class="text-pers very_little">
-              questo è un bel testo
+              Edo è il bambino è più sensibile, che si pone più domande e cerca conforto nell’adulto. È molto buono con tutti e non si tira mai indietro.
             </div>
 
           </div>
