--- a/tabu.html
+++ b/tabu.html
@@ -157,8 +157,8 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          Parlare della morte a un bambino può essere complicato e dipende soprattutto dalla situazione in cui lo si fa. Se il bambino non ha subito lutti i dubbi su cosa può essere la morte e cosa succede dopo morto possono nascere spontaneamente dal confronto con gli altri compagni o da ciò che sentono e vedono in televisione.In questo caso parlarne risulta sicuramente più semplice. La situazione è diversa se si è costretti a parlarne per spiegare la perdita di un conoscente. La cosa migliore da fare, per spiegare a un bambino cosa vuol dire morire, è quella di evitare l'utilizzo di eufemismi ma mantenere il concetto di morte come un concetto reale. Eliminando i richiami alla fantasia si può sperare che il bambino cresca con più consapevolezza di ciò che gli succede intorno e che sappia far fronte all'eventualità di un lutto con tutti gli strumenti per capire cosa stia accadendo. Bisogna ricordarsi che i bambini riescono a cogliere in modo molto preciso i segnali che qualcosa non va e percepiscono anche se gli si sta tenendo nascosto qualcosa. Spesso si pensa di proteggere il bambino nascondendogli certi argomenti, ma per quanto complicati è meglio se vengono affrontati insieme ad un adulto che lasciarlo scoprire da solo e senza gli strumenti adatti per affrontarlo.
+
 
         </div>
 
@@ -175,22 +175,25 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Morta? Cosa vuol dire che è morta?
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Quando qualcuno muore il corpo non si muove più, diventa freddo e non sente più nulla. Le persone resteranno morte per sempre e non torneranno mai più in vita.
+
         </div>
 
       </div>
 
       <div class="text1_position reveal">
         <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
+          In base a cosa si muore?
+
         </div>
 
         <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Alcune persone muoiono perché tanto vecchie e i loro corpi non funzionano più molto bene. Oppure il corpo può essere stato danneggiato da un incidente o da una malattia molto grave che i dottori non riescono a curare.
+
         </div>
 
 
@@ -200,11 +203,12 @@
 
 
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Cosa succede dopo la morte?
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Nessuno sa cosa succede. Alcuni credono che si vada in un posto che si chiama paradiso, dove si ritrovano le anime dei morti. Altri credono che non ci sia nulla.
+
         </div>
 
 
@@ -220,7 +224,7 @@
         <div class="shadow_link">
           <div class="link_padding_sx text_link link_container path_link">
 
-            Cosa vuol dire morire?
+            <a href="#">Cosa vuol dire morire?</a>
 
           </div>
         </div>
@@ -293,8 +297,8 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          Per una bambina vedere il proprio corpo e quello delle ragazze intorno a lei cambiare può destare parecchia confusione ed è importante essere chiari e sinceri quando iniziano a sorgere certi dubbi. Nel caso la bambina (o il bambino) non mostri nessuna curiosità è perfettamente normale ma occorrerà a tempo debito informarlo e informarsi su quanto conosce già grazie alla scuola o ai coetanei. È importante sapere quanto si ritiene informato sull'argomento poiché a scuola la disinformazione su certi argomenti può provocare disagi, ed è importante che a conoscere la definizione di ciclo mestruale non siano solo femmine ma anche i maschi.
+
 
         </div>
 
@@ -320,31 +324,6 @@
 
       </div>
 
-      <div class="text1_position reveal">
-        <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
-
-      <div class="text1_position reveal">
-
-
-        <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
 
 
       <div class="title little black reveal">
@@ -429,8 +408,7 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          I bambini non hanno un’idea chiara di quale sia il loro orientamento sessuale e in età prescolare potrebbero non avere nessuna esigenza di definirlo. Di solito questo accade intorno ai 9 anni. Per quel momento sarebbe bene avere già avuto una serie di piccole conversazioni sull'argomento in modo che il bambino non arrivi del tutto impreparato quando si tratterà di capire delle cose su se stesso. L'importante è trasmettere il concetto che l'orientamento sessuale non deve e non sarà mai un metro di giudizio sulla sua persona, che verrà accettato in qualunque modo e che può sentirsi libero di parlarne quando e come lo ritiene necessario.
 
         </div>
 
@@ -568,8 +546,7 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          Un bambino difficilmente sentirà spontaneo il bisogno di andare da uno specialista, sta quindi al genitore stabilire un rapporto di fiducia che consenta di interpretare i segnali. I bambini non sanno che l'aiuto di cui hanno bisogno è disponibile e accessibile quindi per il genitore è importante capire quando il suo sostengo non è sufficiente. Per questo motivo sarebbe bene che i bambini capissero già da piccoli che rivolgersi ad un aiuto esterno non rappresenta per forza un sintomo di una malattia ma che anzi può aiutare a intraprendere un percorso personale. Sarebbe bene ascoltare anche le parole degli insegnanti e non agitarsi se ritengono che il bambino possa avere bisogno di aiuto. I bambini si comportano in modo diverso a casa e a scuola e gli insegnanti spesso si possono trovare a dover gestire situazioni complicate, in cui il bambino manifesta disagio e che quindi rischia di sentirsi inadeguato all'ambiente che lo circonda.
 
         </div>
 
@@ -704,8 +681,7 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          Parlare ai più piccoli di violenze può essere difficile, soprattutto se si sospetta che il bambino in questione ne sia stato vittima. Per i bambini è difficile capire ciò che è giusto e ciò che è sbagliato nel comportamento degli adulti poiché rimangono per loro il punto di riferimento principale. È importante saper cogliere i segnali e fare chiarezza su cosa è permesso fare da parte di un adulto e cosa no. Bisogna chiarire quali sono i confini che un adulto non dovrebbe superare e che se vengono violati non bisogna mantenere il segreto. Anzi è importante parlare ogni volta che la situazione lo mette a disagio. È possibile che il bambino non voglia parlarne con il genitore, è bene quindi fargli presente chi sono le altre figure con cui può affrontare la situazione.
 
         </div>
 
@@ -843,8 +819,8 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          L'età prescolare si rivela spesso la più adatta per affrontare temi come le dipendenze da droghe, alcool o fumo. In questa età i bambini non hanno un'opinione decisa sull'argomento e non sono informati sugli effetti di tali sostanze. È importante proprio per questo lasciare perdere strategie di terrore e fornire invece informazioni più dettagliate sul perché se ne fa uso, quali sono i rischi e cosa significa essere dipendenti da qualcosa. Solo così si forniranno i mezzi al bambino per poterne discutere a tempo debito e per poteri costruire la propria opinione.
+
 
         </div>
 
@@ -982,8 +958,8 @@
       <div class="scheda_container reveal">
         <div class="text_scheda">
 
-          TaBÙM vuole parlare ai bambini di tche spesso i più grandi hanno paura di affrontare. Crediamo che aiutarli a comprendere e razionalizzare alcuni aspetti della vita sia il modo migliore per riuscire ad affrontare tutti i temi
-          importanti.
+          In età prescolare i bambini iniziano a sperimentare il senso del pudore e a rendersi sempre più conto delle differenze tra maschio e femmina. Le curiosità sul sesso in questa età sono riferite tendenzialmente alla provenienza dei bambini. L'argomento è molto vasto e non è semplice capire come affrontare la risposta. In qualunque modo si decida di farlo è però importante non mentire e non ricadere nelle classiche leggende della cicogna e dei bambini sotto ai cavoli. I bambini si confrontano spesso tra di loro, così facendo potrebbero scoprire le menzogne e ricevere delle informazioni sbagliate. Per quanto l'argomento possa essere complicato è bene stabilire un rapporto di fiducia e far sì che le parole del genitore trovino riscontro nel confronto con gli insegnanti a scuola e con i coetanei. Chiaramente in questa fase non è importante definire tutti i dettagli e si può dire tranquillamente al bambino che la spiegazione non è completa ma che gli sarà spiegato più avanti.
+
 
         </div>
 
