--- a/tabu.html
+++ b/tabu.html
@@ -224,7 +224,7 @@
         <div class="shadow_link">
           <div class="link_padding_sx text_link link_container path_link">
 
-            <a href="#">Cosa vuol dire morire?</a>
+            <a href="https://www.istitutobeck.com/psicoterapia-bambini/la-morte-e-il-lutto#spiegarelamorteaunbambino">Istituto A.T. Beck. <br> La morte e il lutto</a>
 
           </div>
         </div>
@@ -232,7 +232,7 @@
         <div class="shadow_link">
           <div class="link_padding_dx text_link link_container path_link_reverse">
 
-            Per capire.. <br> come affrontare il lutto
+            <a href="https://kidshealth.org/en/parents/death.html">Lyness, D. A. (2016, settembre). <br>Helping Your Child Deal With Death for Parents </a>
 
           </div>
         </div>
@@ -240,7 +240,7 @@
         <div class="shadow_link">
           <div class="link_padding_sx text_link link_container path_link">
 
-            Per capire.. <br> come affrontare il lutto
+            <a href="https://www.researchgate.net/publication/309255558_Aiutare_i_bambini_ad_affrontare_il_lutto">Pesci,S. (2016). Aiutare i bambini ad affrontare il lutto</a>
 
           </div>
         </div>
@@ -248,7 +248,15 @@
         <div class="shadow_link">
           <div class="link_padding_dx text_link link_container path_link_reverse">
 
-            Per capire.. <br> come affrontare il lutto
+            <a href="https://www.psychologytoday.com/us/blog/two-takes-depression/201612/the-dos-and-donts-talking-child-about-death">Serani, D. (2016, 04 dicembre). <br>The Do's and Don'ts of Talking with a Child about Death</a>
+
+          </div>
+        </div>
+
+        <div class="shadow_link">
+          <div class="link_padding_dx text_link link_container path_link_reverse">
+
+            <a href="http://www.psicopedagogie.it/spiegare_morte_ai_bambini.html">Tibiletti, E. Perché si muore? <br> Come spiegare la morte ai bambini</a>
 
           </div>
         </div>
@@ -315,11 +323,13 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Perché le femmine perdono sangue una volta al mese?
+
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Quando le ragazze iniziano a diventare grandi, ogni mese hanno delle cellule che se non vengono utilizzate per trasformarsi in un bambino, sono eliminate attraverso una perdita di sangue.
+
         </div>
 
       </div>
@@ -425,40 +435,21 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Perché ho due mamme e non ho un papà?
+
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Ci sono delle femmine che si amano tra loro e dei maschi che si amano tra loro, è una cosa naturale. L’importante è che tra le due persone ci sia amore e rispetto.
+
+
         </div>
 
       </div>
 
-      <div class="text1_position reveal">
-        <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
 
 
-      </div>
 
-      <div class="text1_position reveal">
-
-
-        <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
 
 
       <div class="title little black reveal">
@@ -563,40 +554,16 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Perché vado dallo psicologo? sono malato?
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          No, lo psicologo è una persona che cercherà di capire tramite giochi ed attività quali sono i nostri punti di forza e di debolezza per aiutarci a far crescere le nostre capacità e farci stare meglio.
         </div>
 
       </div>
 
-      <div class="text1_position reveal">
-        <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
-        </div>
 
-        <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
-
-      <div class="text1_position reveal">
-
-
-        <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
 
 
       <div class="title little black reveal">
@@ -698,40 +665,18 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Chi mi può toccare qui sotto?
+
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Solo alcune persone, come i genitori o i dottori, possono toccare le parti intime. Bisogna dire di no se la situazione non ti piace. E se qualcuno lo fa senza il tuo permesso bisogna raccontarlo. Non deve rimanere un segreto.
+
         </div>
 
       </div>
 
-      <div class="text1_position reveal">
-        <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
-        </div>
 
-        <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
-
-      <div class="text1_position reveal">
-
-
-        <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
 
 
       <div class="title little black reveal">
@@ -837,40 +782,16 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Chi è un drogato?
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          È una persona che non riesce a smettere di prendere una sostanza che fa male ma che al momento lo fa sentire bene. Drogato è una parola offensiva, è meglio dire tossicodipendente.
         </div>
 
       </div>
 
-      <div class="text1_position reveal">
-        <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
-        </div>
 
-        <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
-
-      <div class="text1_position reveal">
-
-
-        <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
 
 
       <div class="title little black reveal">
@@ -976,40 +897,17 @@
 
       <div class="text1_position reveal">
         <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
+          Come entrano i bambini nella pancia della mamma?
+
         </div>
 
         <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+          Il papà con il suo pisellino depone un seme nel buchetto della mamma, dove si trova un altro semino. Questi due semini quando si incontrano formano un uovo che diventerà un bambino.
+
         </div>
 
       </div>
 
-      <div class="text1_position reveal">
-        <div class="sinistra_padding text_domanda qa_container_1 path5">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="destra_padding text_risposta qa_container_2 path6">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
-
-      <div class="text1_position reveal">
-
-
-        <div class="destra_padding text_domanda qa_container_1 path3">
-          Cosa vuol dire morire?
-        </div>
-
-        <div class="sinistra_padding text_risposta qa_container_2 path4">
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-        </div>
-
-
-      </div>
 
 
       <div class="title little black reveal">
