--- a/tabu-mobile.html
+++ b/tabu-mobile.html
@@ -79,36 +79,33 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Morta? Cosa vuol dire che è morta?
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Quando qualcuno muore il corpo non si muove più, diventa freddo e non sente più nulla. Le persone resteranno morte per sempre e non torneranno mai più in vita.
+
       </div>
 
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        In base a cosa si muore?
+
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Alcune persone muoiono perché tanto vecchie e i loro corpi non funzionano più molto bene. Oppure il corpo può essere stato danneggiato da un incidente o da una malattia molto grave che i dottori non riescono a curare.
+
       </div>
 
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Cosa succede dopo la morte?
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Nessuno sa cosa succede. Alcuni credono che si vada in un posto che si chiama paradiso, dove si ritrovano le anime dei morti. Altri credono che non ci sia nulla.
+
       </div>
 
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
 
     </div>
 
@@ -121,7 +118,7 @@
       <div class="shadow_link">
         <div class="link_padding_sx text_link link_container path_link">
 
-            Cosa vuol dire morire?
+          <a href="https://www.istitutobeck.com/psicoterapia-bambini/la-morte-e-il-lutto#spiegarelamorteaunbambino">Istituto A.T. Beck. <br> La morte e il lutto</a>
 
         </div>
       </div>
@@ -129,7 +126,7 @@
       <div class="shadow_link">
         <div class="link_padding_dx text_link link_container path_link_reverse">
 
-            Per capire.. <br> come affrontare il lutto
+          <a href="https://kidshealth.org/en/parents/death.html">Lyness, D. A. (2016, settembre). <br>Helping Your Child Deal With Death for Parents </a>
 
         </div>
       </div>
@@ -137,7 +134,7 @@
       <div class="shadow_link">
         <div class="link_padding_sx text_link link_container path_link">
 
-            Per capire.. <br> come affrontare il lutto
+          <a href="https://www.researchgate.net/publication/309255558_Aiutare_i_bambini_ad_affrontare_il_lutto">Pesci,S. (2016). Aiutare i bambini ad affrontare il lutto</a>
 
         </div>
       </div>
@@ -145,7 +142,15 @@
       <div class="shadow_link">
         <div class="link_padding_dx text_link link_container path_link_reverse">
 
-            Per capire.. <br> come affrontare il lutto
+          <a href="https://www.psychologytoday.com/us/blog/two-takes-depression/201612/the-dos-and-donts-talking-child-about-death">Serani, D. (2016, 04 dicembre). <br>The Do's and Don'ts of Talking with a Child about Death</a>
+
+        </div>
+      </div>
+
+      <div class="shadow_link">
+        <div class="link_padding_dx text_link link_container path_link_reverse">
+
+          <a href="http://www.psicopedagogie.it/spiegare_morte_ai_bambini.html">Tibiletti, E. Perché si muore? <br> Come spiegare la morte ai bambini</a>
 
         </div>
       </div>
@@ -174,36 +179,15 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Perché ho due mamme e non ho un papà?
+
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Ci sono delle femmine che si amano tra loro e dei maschi che si amano tra loro, è una cosa naturale. L’importante è che tra le due persone ci sia amore e rispetto.
+
       </div>
 
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
 
     </div>
 
@@ -269,36 +253,14 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Perché le femmine perdono sangue una volta al mese?
+
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Quando le ragazze iniziano a diventare grandi, ogni mese hanno delle cellule che se non vengono utilizzate per trasformarsi in un bambino, sono eliminate attraverso una perdita di sangue.
       </div>
 
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
 
     </div>
 
@@ -364,35 +326,12 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Perché vado dallo psicologo? sono malato?
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
+        No, lo psicologo è una persona che cercherà di capire tramite giochi ed attività quali sono i nostri punti di forza e di debolezza per aiutarci a far crescere le nostre capacità e farci stare meglio.
 
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
       </div>
 
     </div>
@@ -458,36 +397,14 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Chi è un drogato?
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        È una persona che non riesce a smettere di prendere una sostanza che fa male ma che al momento lo fa sentire bene. Drogato è una parola offensiva, è meglio dire tossicodipendente.
+
       </div>
 
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
 
     </div>
 
@@ -553,36 +470,14 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Chi mi può toccare qui sotto?
+
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Solo alcune persone, come i genitori o i dottori, possono toccare le parti intime. Bisogna dire di no se la situazione non ti piace. E se qualcuno lo fa senza il tuo permesso bisogna raccontarlo. Non deve rimanere un segreto.
       </div>
 
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
 
     </div>
 
@@ -648,35 +543,11 @@
 
     <div class="text1_position reveal">
       <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
+        Come entrano i bambini nella pancia della mamma?
       </div>
 
       <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
-      </div>
-
-      <div class="destra_padding text_domanda qa_container_1 path3">
-        Cosa vuol dire morire?
-      </div>
-
-      <div class="sinistra_padding text_risposta qa_container_2 path4">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di
+        Il papà con il suo pisellino depone un seme nel buchetto della mamma, dove si trova un altro semino. Questi due semini quando si incontrano formano un uovo che diventerà un bambino.
       </div>
 
     </div>
